<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main strings -->
    <string name="app_name" translatable="false">Muassist</string>
    <string name="title_section_metronome">Metronome</string>
    <string name="title_section_tone">Tone Generator</string>
    <string name="title_section_tuner">Tuner</string>
    <string name="title_section_recorder">Recorder</string>
    <string name="tapToStart">Double tap to Start</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">About</string>
    <string name="image">Image</string>
    <string name="headerMet">Control by touch.</string>
    <string name="help">About</string>
    <string name="helpText">Zdeněk Janeček 2012&#8211;2014\n<font size="12">This program comes with <i>ABSOLUTELY NO WARRANTY</i></font> under GPLv3 license\n\nmore at: <a href="https://github.com/qwertzdenek/Muassist">Homepage</a></string>
	<string name="first_run_text">"* Tap and move left/right to be slower/faster \n\n * Double tap to stop/start</string>
    <string name="control">Control</string>
	
    <!-- Global options -->
    <string name="setup_global">Global setup</string>
    <string name="setup_color_title">Choose gradient</string>
    <string name="setup_speed_title">Value change speed</string>
    <string name="pref_color_title">Background</string>
    <string name="pref_color">Set up background</string>
    <string name="pref_orientation_title">Lock rotation</string>
    <string name="pref_orientation">Enable to lock the portraite mode</string>
    <string name="pref_speed_title">Value change speed</string>
    <string name="pref_speed">Set up coeficient of value change on touch control.</string>

    <!-- Metronome -->
    <string name="setup_sound_title">Choose sound</string>
    <string name="pref_sound_title">Tick-tack sound</string>
    <string name="pref_sound">Choose from the predefined sounds</string>

    <!-- Tone Generator -->
    <string name="sharp">#</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="setup_tone_title">Choose A base</string>
    <string name="pref_tone_title">Base tone frequency</string>
    <string name="pref_tone">Choose from the predefined frequencies</string>
    
    <string name="setup_harm_title">Choose harmony density</string>
    <string name="pref_harm_title">Harmony</string>
    <string name="pref_harm">Count of harmonic frequencies</string>
    
    <!-- Recorder -->
    <string name="recording">Recording</string>
    <string name="stopped">Stopped</string>
    <string name="recorded">Recorded</string>
    
    <!-- Tuner -->
    <string name="setup_temp_title">Choose temperament</string>
    <string name="pref_temp_title">Temperament</string>
    <string name="pref_temp">change scale</string>
    
    <!-- Configuration keys -->
    <string name="pref_key_bg" translatable="false">background_update_flag</string>
    <string name="pref_key_sound" translatable="false">sound_update_flag</string>
    <string name="pref_key_orientation" translatable="false">orientation_update_flag</string>
    <string name="pref_key_speed" translatable="false">speed_update_flag</string>
    <string name="pref_key_tone" translatable="false">tone_update_flag</string>
    <string name="pref_key_tuner" translatable="false">tuner_update_flag</string>
    <string name="pref_key_comp" translatable="false">comp_update_flag</string>
    <string name="pref_key_harm" translatable="false">harm_update_flag</string>
    <string name="pref_key_temperament" translatable="false">temp_update_flag</string>
    
</resources>
