<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:contentDescription="@string/image"
        android:src="@drawable/circle"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/title_section_tone"
        android:textSize="16dp" />

    <HorizontalScrollView
        android:id="@+id/tone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tone_text"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/tone_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/toneC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/C"
                android:textSize="40dp"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/toneD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/D"
                android:textSize="40dp"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/toneE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/E"
                android:textSize="40dp"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/toneF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/F"
                android:textSize="40dp"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/toneG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/G"
                android:textSize="40dp"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/toneA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/A"
                android:textSize="40dp"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/toneB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/B"
                android:textSize="40dp"
                android:textColor="@android:color/holo_blue_light" />

        </LinearLayout>
    </HorizontalScrollView>

    <EditText
        android:id="@+id/tone_value_edit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tone"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

</RelativeLayout>
